--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html"><img src="IMG/LOGO.jpg" style="height: 50px; width: 50px;" alt="HI"></a>
+    <a class="navbar-brand" href="index.html"><img src="/msfk/IMG/LOGO.jpg" style="height: 50px; width: 50px;" alt="HI"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <h1 class="display-4">
-          <center><img src="IMG/LOGO.jpg" style="height: 300px; width: 280px;" alt="HI"></center>
+          <center><img src="/msfk/IMG/LOGO.jpg" style="height: 300px; width: 280px;" alt="HI"></center>
         </h1>
         <p class="lead">WELCOME TO MORAL STORIES FOR KIDS. HERE ARE SOME MORAL AND SHORT STORIES FOR KIDS. SOME BEST OF
           MY STORIES ARE THE ANGLE AND LITTLE DUCKLING AND THE DRY TREE. I HOPE YOU WILL LIKE MY STORIES. I HAVE WRITTEN
