Update THE DRY TREE.html

--- a/THE DRY TREE.html
+++ b/THE DRY TREE.html
@@ -13,7 +13,7 @@
   <body>
        <!-- Navbar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html"><img src="IMG/BACKGROUND IMAGES.jpg" style="height: 50px; width: 50px;" alt="HI"></a>
+        <a class="navbar-brand" href="index.html"><img src="IMG/LOGO.png" style="height: 50px; width: 50px;" alt="HI"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -38,7 +38,7 @@
         </div>
       </nav>
       
-<div class="container">
+<div class="container my-4">
   <h5><p>Once upon a time, there lived two farmers named Ram and Sunil. Both were best friends. Ram was good in behaviour while Sunil was bad. But Sunil was good in behaviour with only Ram. One day Sunil asked to Ram “Our master gives us less salary, that’s why we are poor”. Whatever our master gives us is enough for me, said Ram. Sunil said “Oh you are very naive!” You only think badly about our master, said Ram. One day firewood of both Ram and Sunil finished, so when they were doing farming, Sunil asked form Ram “My firewood have finished. Do you have?” Ram said “My firewood have also finished, sorry”. Sunil said “So I will go for cutting trees”. But Ram asked him not to cut trees. I will only cut dry trees, said Sunil. “Ok, then cut dry trees Sunil”.</p>  						<p>xSunil went deep in the forest in search of dry tree. Suddenly he saw a hermit sitting under a dry tree. Sunil asked to the hermit why are you sitting under a dry tree? It also not give you shade. Hearing this hermit said “In my childhood this tree was very green and big. Its fruits were very sweet and juicy and I usually sat in its shade and eat its juicy and sweet fruits. And see now it’s all dry!” Hearing this Sunil laugh and said him to go side because he want to cut the tree. Hearing this, hermit became angry and asked “You don’t know that trees have also life like us?” Sunil laugh and said that dry tree have not life only green trees have life, and listening this hermit begin chanting a mantra and cursed Sunil by making him a dry tree. Hermit then said to Sunil, the dry tree, “Now you know that dry tree have life or not.”</p> 										<p>After a while Ram went to the forest in search of Sunil, after walking deep in the forest he saw the same hermit that have changed Sunil into a dry tree Ram asked to the hermit that he had saw his friend. The hermit pointing to the dry tree he said “That dry tree is your friend, he want to cut this tree where my childhood has spent.” </p>									<p>Ram cried and request to change back his friend into human but the hermit said him that he can’t change him back. Then he begin chanting mantra and changed the dry tree into gold under which the hermit was sitting then the hermit said “You can take as much gold you want in exchange of your friend.” Ram cried and said “I don’t want gold! I only want my friend.” Hearing this hermit said “You are a very honest person. Today you have showed honesty that no one has showed. In the gift of your honesty I will change Sunil back into human.” Then hermit changed Sunil back into human. Sunil said to the hermit “Thank you! Now I know that dry trees have also life.” Both happily went to their home.</p></h5> </div> 
 <br>
 <br>	
