--- a/THE DRY TREE.html
+++ b/THE DRY TREE.html
@@ -13,7 +13,7 @@
   <body>
        <!-- Navbar -->
        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html"><img src="/msfk/IMG/LOGO.png" style="height: 50px; width: 50px;" alt="HI"></a>
+        <a class="navbar-brand" href="index.html"><img src="/msfk/IMG/LOGO.jpg" style="height: 50px; width: 50px;" alt="HI"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
