Update THE ANGEL AND THE LITTLE DUCKLING.html

--- a/THE ANGEL AND THE LITTLE DUCKLING.html
+++ b/THE ANGEL AND THE LITTLE DUCKLING.html
@@ -43,11 +43,7 @@
     </div>
   </nav>
   <!-- Here The Story Starts  -->
-  <div class="container">
-    <br>
-    <br>
-    <br>
-    <br>
+  <div class="container my-4">
     <h5>
       <p>Once upon a time, there lived a duck. She has laid five eggs some time before. She was worried about an egg
         that was very different from other eggs, it was big than the other four eggs. The outer shell was beautiful of
