--- a/THE ANGEL AND THE LITTLE DUCKLING.html
+++ b/THE ANGEL AND THE LITTLE DUCKLING.html
@@ -16,7 +16,7 @@
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html"><img src="IMG/BACKGROUND IMAGES.jpg" style="height: 50px; width: 50px;"
+    <a class="navbar-brand" href="index.html"><img src="IMG/LOGO.jpg" style="height: 50px; width: 50px;"
         alt="HI"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
