--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 
   <title>MORAL STORIES FOR KIDS | For Stories Lovers</title>
+      <!-- Favicon -->
+    <link rel="shortcut icon" href="/msfk/IMG/LOGO.jpg" type="image/x-icon">
+</head>
 </head>
 
 <body>
