--- a/index.html
+++ b/index.html
@@ -36,9 +36,6 @@
           <a class="nav-link" href="STORIES.html">Stories</a>
         </li>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="false">Reffernce of Novels</a>
-        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -65,9 +62,8 @@
           <center><img src="/msfk/IMG/LOGO.jpg" style="height: 300px; width: 280px;" alt="HI"></center>
         </h1>
         <p class="lead">WELCOME TO MORAL STORIES FOR KIDS. HERE ARE SOME MORAL AND SHORT STORIES FOR KIDS. SOME BEST OF
-          MY STORIES ARE THE ANGLE AND LITTLE DUCKLING AND THE DRY TREE. I HOPE YOU WILL LIKE MY STORIES. I HAVE WRITTEN
-          IT ON MY OWN. NOW I AM WRITTING A NOVEL, WHEN IT WILL BE COMPLETED IT WILL BE ALSO VISIBLE ON THE WEBSITE.
-          <br><br> SO ENJOY!😊😊
+          MY STORIES ARE THE ANGLE AND LITTLE DUCKLING AND THE DRY TREE. I HOPE YOU WILL LIKE MY STORIES.
+          <br><br>ENJOY!😊😊
         </p>
       </div>
     </div>
