--- a/STORIES.html
+++ b/STORIES.html
@@ -15,6 +15,8 @@
 
 
   <title>STORIES</title>
+        <!-- Favicon -->
+    <link rel="shortcut icon" href="/msfk/IMG/LOGO.jpg" type="image/x-icon">
 </head>
 
 <body>
@@ -35,7 +37,6 @@
         <li class="nav-item active">
           <a class="nav-link" href="STORIES.html">Stories</a>
         </li>
-        </li>>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
